--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -98,7 +98,7 @@ input, select, textarea {
 		}
 
 	body, input, select, textarea {
-		color: #fff;
+		color: #000;
 		font-family: "Lato", sans-serif;
 		font-size: 16pt;
 		font-weight: 400;
@@ -1786,8 +1786,8 @@ input, select, textarea {
 	}
 
 	header.major h2 {
-		color: #ff000;
-		font-size: 3.5em;
+		color: #ff0000;
+		font-size: 2.5em;
 	}
 
 		header.major h2 + p {
@@ -3032,12 +3032,12 @@ input, select, textarea {
 				width: 100%;
 				z-index: 10001;
 				background: #222;
-				color: #fff;
+				color: #000;
 				min-width: 320px;
 			}
 
 				#titleBar .title {
-					color: #fff;
+					color: #f00;
 					display: block;
 					font-weight: 700;
 					height: 44px;
@@ -3078,7 +3078,7 @@ input, select, textarea {
 
 					#titleBar .toggle:before {
 						background: #000000;
-						color: #000000;
+						color: #ff0000;
 						content: '\f0c9';
 						display: block;
 						font-size: 18px;
