--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2729,7 +2729,7 @@ input, select, textarea {
 		}
 
 			#header a:hover {
-				color: #000000 !important;
+				color: #ff0000 !important;
 			}
 
 		#header > header {
